# poetry-project-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ruff.yml
