[tool.poetry]
name = "poetry-project-template"
version = "0.0.1"
description = "Poetry project template."
authors = ["17TheWord <17theword@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
isort = "^5.13.2"
ruff = "^0.6.4"

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "PYI", "PT", "Q"]
ignore = ["E402", "E501", "F401", "C901", "UP037", "UP035", "UP006", "PYI021"]

[tool.ruff.lint.per-file-ignores]
"nonebot/adapters/minecraft/__init__.py" = ["F403"]
"nonebot/adapters/minecraft/bot.pyi" = ["UP007", "PYI020"]
"nonebot/adapters/minecraft/collator.py" = ["C417"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
